--- a/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
@@ -738,7 +738,7 @@
           "legalAddressSection": "Legal address",
           "technicalAddressSection": "Technical address",
           "addressSameAsMeteringPoint": "Same as metering point address",
-          "addressSameAsLegal": "Same as legal metering point address",
+          "addressSameAsLegal": "Same as legal address",
           "street": "Street",
           "houseNumber": "House number",
           "floor": "Floor",
@@ -747,7 +747,7 @@
           "city": "City",
           "country": "Country",
           "streetCode": "Street code",
-          "supplementaryCityName": "Supplementary city name",
+          "citySubdivisionName": "Supplementary city name",
           "postBox": "Post box",
           "municipalityCode": "Municipality code",
           "municipalityCodeError": {
