--- a/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
@@ -725,6 +725,7 @@
           "legalContactSection": "Legal contact",
           "technicalContactSection": "Technical contact",
           "contactSameAsCustomer": "Same as customer name",
+          "technicalContactSameAsLegal": "Same as legal contact",
           "contactName": "Contact name",
           "attention": "Attn.",
           "phoneNumber": "Phone number",
@@ -737,6 +738,7 @@
           "legalAddressSection": "Legal address",
           "technicalAddressSection": "Technical address",
           "addressSameAsMeteringPoint": "Same as metering point address",
+          "addressSameAsLegal": "Same as legal address",
           "street": "Street",
           "houseNumber": "House number",
           "floor": "Floor",
