Added prices feature

--- a/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
@@ -406,6 +406,11 @@
           "withoutPredictablePrice": "Ikke forudsigelig pris"
         }
       }
+    },
+    "charge": {
+      "tabs": {
+        "pricesLabel": "Priser"
+      }
     }
   },
   "meteringPoint": {
