--- a/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
@@ -405,6 +405,11 @@
           "withoutPredictablePrice": "Non-predictable price"
         }
       }
+    },
+    "charge": {
+      "tabs": {
+        "pricesLabel": "Prices"
+      }
     }
   },
   "meteringPoint": {
