--- a/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
@@ -577,7 +577,7 @@
     "hideHistoricalButton": "Skjul historiske",
     "processOverview": {
       "columns": {
-        "createdAt": "Beskedtidspunt",
+        "createdAt": "Beskedtidspunkt",
         "documentType": "Type",
         "state": "Status",
         "cutoffDate": "Skæringsdato",
