--- a/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
@@ -370,11 +370,11 @@
       "TARIFF": "Tariff"
     },
     "resolutions": {
-      "Daily": "Daglig",
-      "QuarterHourly": "Kvartalsvis",
-      "Hourly": "Timevis",
-      "Monthly": "Månedlig",
-      "Unknown": "Ukendt"
+      "Daily": "Daily",
+      "QuarterHourly": "Quarterly",
+      "Hourly": "Hourly",
+      "Monthly": "Monthly",
+      "Unknown": "Unknown"
     },
     "vatClassifications": {
       "NO_VAT": "Without VAT",
