Get charge, and show header info (#4852)
Co-authored-by: github-actions[bot] <github-actions[bot]@users.noreply.github.com>
Co-authored-by: Mathias Sejrup Plougmann <masep@energinet.dk>

--- a/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
@@ -364,13 +364,24 @@
     "6": "Yearly settlement (6)"
   },
   "charges": {
+    "chargeTypes": {
+      "SUBSCRIPTION": "Subscription",
+      "FEE": "Fee",
+      "TARIFF": "Tariff"
+    },
+    "resolutions": {
+      "Daily": "Daily",
+      "QuarterHourly": "Quarterly",
+      "Hourly": "Hourly",
+      "Monthly": "Monthly",
+      "Unknown": "Unknown"
+    },
+    "vatClassifications": {
+      "NO_VAT": "Without VAT",
+      "VAT25": "With VAT"
+    },
     "charges": {
       "topBarTitle": "Prices",
-      "chargeTypes": {
-        "SUBSCRIPTION": "Subscription",
-        "FEE": "Fee",
-        "TARIFF": "Tariff"
-      },
       "table": {
         "columns": {
           "id": "ID",
@@ -407,8 +418,16 @@
       }
     },
     "charge": {
+      "type": "Type",
+      "owner": "Owner",
+      "resolution": "Resolution",
+      "transparentInvoicing": "Transparent Invoicing",
+      "vat": "VAT",
       "tabs": {
         "pricesLabel": "Prices"
+      },
+      "actions": {
+        "actionsButton": "Actions"
       }
     }
   },
