--- a/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
@@ -429,7 +429,8 @@
       },
       "actions": {
         "actionsButton": "Handlinger"
-      }
+      },
+      "breadcrumb": "Priser"
     }
   },
   "meteringPoint": {
