--- a/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
@@ -428,7 +428,8 @@
       },
       "actions": {
         "actionsButton": "Actions"
-      }
+      },
+      "breadcrumb": "Prices"
     }
   },
   "meteringPoint": {
