Added history and information tabs

--- a/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
@@ -425,7 +425,9 @@
       "transparentInvoicing": "Viderefakturering",
       "vat": "Moms",
       "tabs": {
-        "pricesLabel": "Priser"
+        "pricesLabel": "Priser",
+        "informationLabel": "Information",
+        "historyLabel": "Historik"
       },
       "actions": {
         "actionsButton": "Handlinger"
