--- a/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
@@ -424,7 +424,9 @@
       "transparentInvoicing": "Transparent Invoicing",
       "vat": "VAT",
       "tabs": {
-        "pricesLabel": "Prices"
+        "pricesLabel": "Prices",
+        "informationLabel": "Information",
+        "historyLabel": "History"
       },
       "actions": {
         "actionsButton": "Actions"
