CPR Validation additions (#4860)
Co-authored-by: github-actions[bot] <github-actions[bot]@users.noreply.github.com>

--- a/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
@@ -743,7 +743,9 @@
           "cprError": {
             "containsLetters": "Må ikke indeholde bogstaver",
             "containsDash": "Må ikke indeholde bindestreg",
-            "invalidCprLength": "Skal bestå af 10 cifre"
+            "invalidCprLength": "Skal bestå af 10 cifre",
+            "invalidDate": "Ugyldig dato",
+            "allOnes": "Må ikke bruges"
           },
           "cvrInvalid": "{{ marketParticipant.actor.create.cvrInvalid }}"
         },
