--- a/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
@@ -396,7 +396,7 @@
           "owners": "Ejer",
           "status": "Status",
           "vat": "Moms",
-          "moreOptions": "Flere filtere"
+          "moreOptions": "Flere filtre"
         },
         "chargeStatus": {
           "AWAITING": "Afventer",
