Added information cards

--- a/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
@@ -432,7 +432,14 @@
       "actions": {
         "actionsButton": "Handlinger"
       },
-      "breadcrumb": "Priser"
+      "breadcrumb": "Priser",
+      "priceInformation": {
+        "name": "Navn",
+        "description": "Beskrivelse",
+        "vatClassification": "Moms",
+        "transparentInvoicing": "Viderefakturering",
+        "current": "Aktuel"
+      }
     }
   },
   "meteringPoint": {
