--- a/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
@@ -431,7 +431,14 @@
       "actions": {
         "actionsButton": "Actions"
       },
-      "breadcrumb": "Prices"
+      "breadcrumb": "Prices",
+      "priceInformation": {
+        "name": "Name",
+        "description": "Description",
+        "vatClassification": "VAT",
+        "transparentInvoicing": "Transparent Invoicing",
+        "current": "Current"
+      }
     }
   },
   "meteringPoint": {
