Added history table

--- a/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
@@ -438,7 +438,18 @@
         "description": "Beskrivelse",
         "vatClassification": "Moms",
         "transparentInvoicing": "Viderefakturering",
-        "current": "Aktuel"
+        "current": "Aktuel",
+        "history": {
+          "table": {
+            "columns": {
+              "timestamp": "Tidsstempel",
+              "entry": "Ændring"
+            }
+          },
+          "auditLogs": {
+            "Sample entry": "Dette er en sample {{ entry }}"
+          }
+        }
       }
     }
   },
