--- a/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
@@ -385,7 +385,7 @@
       "topBarTitle": "Priser",
       "table": {
         "columns": {
-          "id": "ID",
+          "code": "ID",
           "type": "Type",
           "name": "Navn",
           "owner": "Ejer",
