--- a/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
@@ -384,7 +384,7 @@
       "topBarTitle": "Prices",
       "table": {
         "columns": {
-          "id": "ID",
+          "code": "ID",
           "type": "Type",
           "name": "Name",
           "owner": "Owner",
