Make day table handle all res

--- a/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
@@ -381,6 +381,16 @@
       "NO_VAT": "Uden moms",
       "VAT25": "Med moms"
     },
+    "series": {
+      "columns": {
+        "QuarterHourly": "Tidspunkt",
+        "Hourly": "Tidspunkt",
+        "Daily": "Dato",
+        "Monthly": "Måned",
+        "Unknown": "Sekvens",
+        "price": "Aktuel pris"
+      }
+    },
     "charges": {
       "topBarTitle": "Priser",
       "table": {
