--- a/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
@@ -380,6 +380,16 @@
       "NO_VAT": "Without VAT",
       "VAT25": "With VAT"
     },
+    "series": {
+      "columns": {
+        "QuarterHourly": "Time",
+        "Hourly": "Time",
+        "Daily": "Date",
+        "Monthly": "Month",
+        "Unknown": "Sequence",
+        "price": "Current price"
+      }
+    },
     "charges": {
       "topBarTitle": "Prices",
       "table": {
