feat: add United Kingdom (GB) support across localization and components

--- a/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
@@ -159,6 +159,7 @@
       "SE": "Sverige",
       "NO": "Norge",
       "FI": "Finland",
+      "GB": "Storbritannien",
       "DE": "Tyskland",
       "PL": "Polen",
       "NL": "Holland",
@@ -1175,6 +1176,7 @@
           "SE": "Sverige",
           "NO": "Norge",
           "FI": "Finland",
+          "GB": "Storbritannien",
           "DE": "Tyskland"
         },
         "glnOrEicNumber": "GLN/EIC",
