--- a/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
@@ -159,6 +159,7 @@
       "SE": "Sweden",
       "NO": "Norway",
       "FI": "Finland",
+      "GB": "United Kingdom",
       "DE": "Germany",
       "PL": "Poland",
       "NL": "Netherlands",
@@ -1174,6 +1175,7 @@
           "SE": "Sweden",
           "NO": "Norway",
           "FI": "Finland",
+          "GB": "United Kingdom",
           "DE": "Germany"
         },
         "glnOrEicNumber": "GLN/EIC",
