--- a/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
@@ -468,7 +468,9 @@
         "columns": {
           "price": "Pris",
           "time": "Indsendt"
-        }
+        },
+        "copyMessage": "Kopier besked-ID",
+        "navigateToMessage": "Gå til besked"
       }
     }
   },
