Add show history toggle

--- a/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
@@ -383,6 +383,7 @@
       "VAT25": "Med moms"
     },
     "series": {
+      "showHistory": "Vis historik",
       "columns": {
         "QuarterHourly": "Tidspunkt",
         "Hourly": "Tidspunkt",
