--- a/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
@@ -382,6 +382,7 @@
       "VAT25": "With VAT"
     },
     "series": {
+      "showHistory": "Show history",
       "columns": {
         "QuarterHourly": "Time",
         "Hourly": "Time",
