--- a/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
@@ -382,16 +382,6 @@
       "NO_VAT": "Uden moms",
       "VAT25": "Med moms"
     },
-    "series": {
-      "columns": {
-        "QuarterHourly": "Tidspunkt",
-        "Hourly": "Tidspunkt",
-        "Daily": "Dato",
-        "Monthly": "Måned",
-        "Unknown": "Sekvens",
-        "price": "Aktuel pris"
-      }
-    },
     "charges": {
       "topBarTitle": "Priser",
       "table": {
@@ -461,6 +451,26 @@
             "Sample entry": "Dette er en sample {{ entry }}"
           }
         }
+      }
+    },
+    "series": {
+      "columns": {
+        "QuarterHourly": "Tidspunkt",
+        "Hourly": "Tidspunkt",
+        "Daily": "Dato",
+        "Monthly": "Måned",
+        "Unknown": "Sekvens",
+        "price": "Aktuel pris"
+      },
+      "details": {
+        "current": "Aktuel",
+        "time": "Tidspunkt",
+        "columns": {
+          "price": "Pris",
+          "time": "Indsendt"
+        },
+        "copyMessage": "Kopier besked-ID",
+        "navigateToMessage": "Gå til besked"
       }
     }
   },
