feat(dh): add show history toggle to charge series (#4900)

--- a/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
@@ -454,6 +454,7 @@
       }
     },
     "series": {
+      "showHistory": "Vis historik",
       "columns": {
         "QuarterHourly": "Tidspunkt",
         "Hourly": "Tidspunkt",
