--- a/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
@@ -453,6 +453,7 @@
       }
     },
     "series": {
+      "showHistory": "Show history",
       "columns": {
         "QuarterHourly": "Time",
         "Hourly": "Time",
