--- a/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
@@ -371,11 +371,11 @@
       "TARIFF": "Tariff"
     },
     "resolutions": {
-      "Daily": "Daily",
-      "QuarterHourly": "Quarterly",
-      "Hourly": "Hourly",
-      "Monthly": "Monthly",
-      "Unknown": "Unknown"
+      "daily": "Daily",
+      "quarterhourly": "Quarterly",
+      "hourly": "Hourly",
+      "monthly": "Monthly",
+      "unknown": "Unknown"
     },
     "vatClassifications": {
       "NO_VAT": "Without VAT",
@@ -455,11 +455,11 @@
     "series": {
       "showHistory": "Show history",
       "columns": {
-        "QuarterHourly": "Time",
-        "Hourly": "Time",
-        "Daily": "Date",
-        "Monthly": "Month",
-        "Unknown": "Sequence",
+        "quarterhourly": "Time",
+        "hourly": "Time",
+        "daily": "Date",
+        "monthly": "Month",
+        "unknown": "Sequence",
         "price": "Current price"
       },
       "details": {
@@ -471,6 +471,17 @@
         },
         "copyMessage": "Copy message ID",
         "navigateToMessage": "Go to message"
+      },
+      "csv": {
+        "fileName": "DataHub prices - {{ shared.downloadNameParams }}",
+        "columns": {
+          "owner": "Owner",
+          "type": "Type",
+          "id": "ID",
+          "resolution": "Resolution",
+          "from": "From",
+          "to": "To"
+        }
       }
     }
   },
