feat(dh): basic page for create metering point

--- a/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
@@ -844,6 +844,15 @@
       },
       "success": "Move-in is now registered",
       "save": "Customer move-in"
+    },
+    "create": {
+      "modal": {
+        "title": "Select type of metering point to create",
+        "label": "Metering point type",
+        "placeholder": "Input or select",
+        "cancel": "Cancel",
+        "start": "Start"
+      }
     }
   },
   "messageArchive": {
