--- a/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
@@ -461,7 +461,8 @@
         "daily": "Dato",
         "monthly": "Måned",
         "unknown": "Sekvens",
-        "price": "Aktuel pris"
+        "price": "Aktuel pris",
+        "tooltip": "● Har ændrede værdier"
       },
       "details": {
         "current": "Aktuel",
