--- a/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
@@ -476,6 +476,7 @@
         "fileName": "DataHub prices - {{ shared.downloadNameParams }}",
         "columns": {
           "owner": "Owner",
+          "gln": "GLN",
           "type": "Type",
           "id": "ID",
           "resolution": "Resolution",
