--- a/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
@@ -455,17 +455,19 @@
     },
     "series": {
       "showHistory": "Vis historik",
-      "columns": {
+      "resolution": {
         "quarterhourly": "Tidspunkt",
         "hourly": "Tidspunkt",
         "daily": "Dato",
         "monthly": "Måned",
-        "unknown": "Sekvens",
-        "price": "Aktuel pris"
+        "unknown": "Sekvens"
+      },
+      "columns": {
+        "price": "Aktuel pris",
+        "tooltip": "● Har ændrede værdier"
       },
       "details": {
         "current": "Aktuel",
-        "time": "Tidspunkt",
         "columns": {
           "price": "Pris",
           "time": "Indsendt"
