--- a/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
@@ -433,23 +433,23 @@
       "actions": {
         "actionsButton": "Handlinger"
       },
-      "breadcrumb": "Priser",
-      "priceInformation": {
-        "name": "Navn",
-        "description": "Beskrivelse",
-        "vatClassification": "Moms",
-        "transparentInvoicing": "Viderefakturering",
-        "current": "Aktuel",
-        "history": {
-          "table": {
-            "columns": {
-              "timestamp": "Tidsstempel",
-              "entry": "Ændring"
-            }
-          },
-          "auditLogs": {
-            "Sample entry": "Dette er en sample {{ entry }}"
+      "breadcrumb": "Priser"
+    },
+    "priceInformation": {
+      "name": "Navn",
+      "description": "Beskrivelse",
+      "vatClassification": "Moms",
+      "transparentInvoicing": "Viderefakturering",
+      "current": "Aktuel",
+      "history": {
+        "table": {
+          "columns": {
+            "timestamp": "Tidsstempel",
+            "entry": "Ændring"
           }
+        },
+        "auditLogs": {
+          "Sample entry": "Dette er en sample {{ entry }}"
         }
       }
     },
