--- a/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
@@ -479,6 +479,7 @@
         "fileName": "DataHub priser - {{ shared.downloadNameParams }}",
         "columns": {
           "owner": "Ejer",
+          "gln": "GLN",
           "type": "Type",
           "id": "Id",
           "resolution": "Tidsopløsning",
