feat(dh): basic page for create metering point (#4918)

--- a/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
@@ -848,6 +848,15 @@
       },
       "success": "Tilflytning er nu registreret",
       "save": "Tilflyt kunde"
+    },
+    "create": {
+      "modal": {
+        "title": "Vælg type af målepunkt til oprettelse",
+        "label": "Målepunktstype",
+        "placeholder": "Indtast eller vælg",
+        "cancel": "Annuller",
+        "start": "Start"
+      }
     }
   },
   "messageArchive": {
