--- a/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
@@ -506,6 +506,9 @@
       "processes": {
         "tabLabel": "Procesoverblik"
       },
+      "prices": {
+        "tabLabel": "Priser"
+      },
       "messages": {
         "tabLabel": "Beskeder"
       },
