--- a/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
@@ -505,6 +505,9 @@
       "processes": {
         "tabLabel": "Processes"
       },
+      "prices": {
+        "tabLabel": "Prices"
+      },
       "messages": {
         "tabLabel": "Messages"
       },
